Fix h1 alignment

--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -26,6 +26,7 @@ h1 {
   font-weight: 400;
   font-style: normal;
     font-size: 80px;
+    text-align: center;
     
   } 
 
